resolved fdo#52205 do not force all text cells in CSV import

Do not set ScSetStringParam::mbSetTextCellFormat=true for SetString()
that slightly changed behavior, the nColFormat==SC_COL_TEXT case is
handled separately anyway.

Change-Id: I0a0f9472801dcb02af77d6eaf90170309a41e9a8
Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>
Signed-off-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Signed-off-by: Michael Meeks <michael.meeks@suse.com>